prevent wrap

--- a/css/antlr.css
+++ b/css/antlr.css
@@ -64,7 +64,7 @@ pre { white-space: pre-wrap; }
 .equals { color: #9e33c7; }
 .path { color: #31a2e6; }
 
-pre.pre3 { min-height: 190px; float: left; width: 168px; padding: 0 10px 0 0; margin: 0 11px 0 0; border-right: 1px solid #CCC; font-size: 11px; line-height: 18px  }
+pre.pre3 { min-height: 190px; float: left; width: 175px; padding: 0 10px 0 0; margin: 0 11px 0 0; border-right: 1px solid #CCC; font-size: 11px; line-height: 18px  }
 pre.pre3:nth-child(3) { margin: 0; border: 0; padding-right: 0; }
 pre.pre3 img { margin: 0 0 0 5px; }
 
